Use CSS Selectors to Style Elements

--- a/index.html
+++ b/index.html
@@ -7,7 +7,36 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color: aqua;">To Change the text Colour</h1>
-    <h1 style="color: blue;">To Change the text Colour</h1>
+    <style>
+        h1{
+            color: red;
+        }
+        h4,p{
+            color: blue;
+        }
+        .tab{
+            border: solid;
+        }
+        th , td{
+            border: solid   ;
+        }
+    </style>
+    <h1>Use Selector to style element</h1>
+    <h4>Use Selector to style element</h4>
+    <p>Use Selector to style element</p>
+    <table class="tab">
+        <tr>
+            <th>the</th>
+            <th>iss</th>
+        </tr>
+        <tr>
+            <td>23</td>
+            <td>45</td>
+        </tr>
+        <tr>
+            <td>Sumit</td>
+            <td>gdyhusgcf</td>
+        </tr>
+    </table>
 </body>
 </html>
