Use a CSS Class to Style an Element

--- a/index.html
+++ b/index.html
@@ -8,35 +8,20 @@
 </head>
 <body>
     <style>
-        h1{
+        
+        .t{
+            color: aqua;
+        }
+        .t2{
+            color: bisque;
+        }
+        .p{
             color: red;
         }
-        h4,p{
-            color: blue;
-        }
-        .tab{
-            border: solid;
-        }
-        th , td{
-            border: solid   ;
-        }
+        
     </style>
-    <h1>Use Selector to style element</h1>
-    <h4>Use Selector to style element</h4>
-    <p>Use Selector to style element</p>
-    <table class="tab">
-        <tr>
-            <th>the</th>
-            <th>iss</th>
-        </tr>
-        <tr>
-            <td>23</td>
-            <td>45</td>
-        </tr>
-        <tr>
-            <td>Sumit</td>
-            <td>gdyhusgcf</td>
-        </tr>
-    </table>
+    <h1 class="t"> This is heading h1</h1>
+    <h4 class="t2"> This is also a heading</h4>
+    <p class="p">This is a paragraph</p>
 </body>
 </html>
