--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         }
         
     </style>
-    <h1 class="t"> This is heading h1</h1>
-    <h4 class="t2"> This is also a heading</h4>
+    <h1 class="p"> This is heading h1</h1>
+    <h4 class="p"> This is also a heading</h4>
     <p class="p">This is a paragraph</p>
 </body>
 </html>
