--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <body>
     <style>
         
-        .t{
-            color: aqua;
-        }
-        .t2{
-            color: bisque;
-        }
         .p{
             color: red;
+            font-size: 40px;
+        }
+        .p2{
+            font-size: 20px;
+            color: #000;
         }
         
     </style>
-    <h1 class="p"> This is heading h1</h1>
-    <h4 class="p"> This is also a heading</h4>
-    <p class="p">This is a paragraph</p>
+    <p class="p">
+        Change the Font Size of an Element
+    </p>
+    <p class="p2">Change the Font Size of an Element</p>
 </body>
 </html>
