Import a Google Font

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     
-    <p style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Set the Font Family of an Element</p>
-    <p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Set the Font Family of an Element</p>
-    <p style="font-family: cursive;">Set the Font Family of an Element</p>
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+    <h1 style="font-family: Lobster;">Import a Google Font   Lobster Font</h1>
+    <p>Import a Google Font</p>
 </body>
 </html>
