Specify How Fonts Should Degrade

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     
-    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
-    <h1 style="font-family: Lobster;">Import a Google Font   Lobster Font</h1>
-    <p>Import a Google Font</p>
+    //<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+    <h1 style="font-family: Lobster monospace;">Import a Google Font   Lobster Font</h1>
+    <p>Lobster not found so it degrade to monospace</p>
 </body>
 </html>
