Size Your Images

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    
-    //<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
-    <h1 style="font-family: Lobster monospace;">Import a Google Font   Lobster Font</h1>
-    <p>Lobster not found so it degrade to monospace</p>
+    <style>
+        .s{
+            width: 100px;
+        }
+        .m{
+            width: 500px;
+        }
+    </style>
+<img class="s" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back." alt="">
+<img class="m" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back." alt="">
 </body>
 </html>
