Add Borders Around Your Elements

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <style>
-        .s{
-            width: 100px;
-        }
         .m{
             width: 500px;
+            border: solid;
+            border-color: red;
+            border-width:20px ;
         }
     </style>
-<img class="s" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back." alt="">
+
 <img class="m" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back." alt="">
 </body>
 </html>
