--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             border: solid;
             border-color: red;
             border-width:20px ;
-            border-radius: 20px;
+            border-radius: 50%;
         }
     </style>
 
