Set the id of an Element

--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
        .d{
            background-color: aqua;
        }
+       #pa{
+           font-size: 30px;
+           font-style: italic;
+       }
     </style>
 
     <h1>Give a Background Color to a div Element</h1>
 
     <div class="d">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, eum consequatur dolorem laborum provident cum voluptatibus delectus corrupti! Repellendus quidem ducimus voluptate numquam sequi quasi accusantium neque, sit dolorum optio ad voluptatum deserunt architecto unde consequatur alias! Magni, totam? Ipsum suscipit pariatur ut vel corrupti obcaecati dolor unde quidem voluptates asperiores aut labore nemo iure saepe, provident id rerum sequi incidunt hic inventore, possimus optio. Ea eaque, doloribus cupiditate, maiores eligendi neque fugiat iste minus maxime magni, itaque suscipit iusto necessitatibus facilis quo eius minima quas voluptas numquam deserunt. Enim!</p>
+        <p id="pa">Set the id of an Element</p>
     </div>
 </body>
 </html>
