Use an id Attribute to Style an Element

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body>
     <style>
        .d{
-           background-color: aqua;
+           background-color: yellowgreen;
        }
        #pa{
            font-size: 30px;
-           font-style: italic;
+           font-style: bold;
        }
     </style>
 
-    <h1>Give a Background Color to a div Element</h1>
+    <h1>Use an id Attribute to Style an Element</h1>
 
     <div class="d">
-        <p id="pa">Set the id of an Element</p>
+        <p id="pa">Use an id Attribute to Style an Element</p>
     </div>
 </body>
 </html>
