Adjust the Padding of an Element

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
        #pa{
            font-size: 30px;
            font-style: bold;
+           padding: 50px;
        }
     </style>
 
-    <h1>Use an id Attribute to Style an Element</h1>
+    <h1>Adjust the Padding of an Element</h1>
 
     <div class="d">
-        <p id="pa">Use an id Attribute to Style an Element</p>
+        <p id="pa">Adjust the Padding of an Element</p>
     </div>
 </body>
 </html>
