Adjust the Margin of an Element

--- a/index.html
+++ b/index.html
@@ -14,14 +14,22 @@
        #pa{
            font-size: 30px;
            font-style: bold;
-           padding: 50px;
+           border: solid;
+           margin: 130px;
+       }
+       #p2{
+            margin: 50px;
+            background-color: brown;
+            border: solid;
        }
     </style>
 
-    <h1>Adjust the Padding of an Element</h1>
+    <h1>Adjust the Margin of an Element</h1>
 
     <div class="d">
-        <p id="pa">Adjust the Padding of an Element</p>
+        <p id="pa">Adjust the Margin of an Element</p>
+        
     </div>
+    <p id="p2">Adjust the Margin of an Element</p>
 </body>
 </html>
