Add Different Margins to Each Side of an Element

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <style>
        p{
            border: solid;
-           padding-left: 10px;
-           padding-top: 40px;
-           padding-bottom: 90px;
-           padding-right: 200px;
+           margin-left: 10px;
+           margin-top: 40px;
+           margin-bottom: 90px;
+           margin-right: 200px;
        }
        
     </style>
 
     <p>
-        Add Different Padding to Each Side of an Element
+        Add Different Margins to Each Side of an Element
     </p>
 </body>
 </html>
