Use Clockwise Notation to Specify the Padding of an Element

--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
     <style>
        p{
            border: solid;
-           margin-left: 10px;
-           margin-top: 40px;
-           margin-bottom: 90px;
-           margin-right: 200px;
+           padding: 10px 40px 80px 160px;
+       }
+       #p2{
+           border: solid;
+           padding: 160px 80px 40px 100px;
        }
        
     </style>
 
     <p>
-        Add Different Margins to Each Side of an Element
+        Use Clockwise Notation to Specify the Padding of an Element
+    </p>
+    <p id="p2">
+        Use Clockwise Notation to Specify the Padding of an Element
     </p>
 </body>
 </html>
