--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     <style>
        p{
            border: solid;
-           padding: 10px 40px 80px 160px;
+           margin: 30px 40px 80px 160px;
        }
        #p2{
            border: solid;
-           padding: 160px 80px 40px 100px;
+           margin: 160px 80px 40px 100px;
        }
        
     </style>
 
     <p>
-        Use Clockwise Notation to Specify the Padding of an Element
+        Use Clockwise Notation to Specify the Margin of an Element
     </p>
     <p id="p2">
-        Use Clockwise Notation to Specify the Padding of an Element
+        Use Clockwise Notation to Specify the Margin of an Element
     </p>
 </body>
 </html>
