Use Attribute Selectors to Style Elements

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
     </style>
 
     <p>
-        Use Clockwise Notation to Specify the Margin of an Element
+        Use Attribute Selectors to Style Elements
     </p>
     <p id="p2">
-        Use Clockwise Notation to Specify the Margin of an Element
-    </p>
+        Use Attribute Selectors to Style Elements
+        <input type="checkbox">  checkbox1
+        <input type="checkbox"> checkbox 2
 </body>
 </html>
