--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: yellowgreen;">
-    <h1>Style the HTML Body Element</h1>
+<body style="color: aqua;font-family: inherit;">
+    <h1>Inherit Styles from the Body Element</h1>
 </body>
 </html>
