Prioritize One Style Over Another

--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="color: aqua;font-family: inherit;">
-    <h1>Inherit Styles from the Body Element</h1>
+<body>
+<style>
+    body {
+      background-color: black;
+      font-family: monospace;
+      color: green;
+    }
+    h1{
+        color: rebeccapurple;
+    }
+  </style>
+  <h1>Prioritize One Style Over Another</h1>
+  <h3>Prioritize One Style Over Another</h3>
 </body>
 </html>
