--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body class="bla">
 <style>
-    body {
+    .bl{
+        color: blue;
+    }
+     .bla {
       background-color: black;
       font-family: monospace;
       color: green;
     }
-    h1{
-        color: rebeccapurple;
-    }
+    
+   
+   
   </style>
   <h1>Prioritize One Style Over Another</h1>
-  <h3>Prioritize One Style Over Another</h3>
+  <h3 class="bl">Prioritize One Style Over Another</h3>
 </body>
 </html>
