Override Class Declarations by Styling ID Attributes

--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
 <body class="bla">
 <style>
     .bl{
-        color: blue;
+        color: aqua;
     }
-     .bla {
-      background-color: black;
-      font-family: monospace;
-      color: green;
+    #tt{
+        color: brown;
     }
     
    
    
   </style>
-  <h1>Prioritize One Style Over Another</h1>
-  <h3 class="bl">Prioritize One Style Over Another</h3>
+  <h1 class="bl">Override Class Declarations by Styling ID Attributes</h1>
+  <h3 class="bl" id="tt">Override Class Declarations by Styling ID Attributes</h3>
 </body>
 </html>
