--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    
    
   </style>
-  <h1 class="bl">Override Class Declarations by Styling ID Attributes</h1>
-  <h3 class="bl" id="tt">Override Class Declarations by Styling ID Attributes</h3>
+  <h1 class="bl">Override Class Declarations with Inline Styles</h1>
+  <h3 class="bl" id="tt" style="color: green;">Override Class Declarations with Inline Styles</h3>
 </body>
 </html>
