Override All Other Styles by using Important

--- a/index.html
+++ b/index.html
@@ -1,24 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body class="bla">
 <style>
-    .bl{
-        color: aqua;
+    body {
+      background-color: black;
+      font-family: monospace;
+      color: green;
     }
-    #tt{
-        color: brown;
+    #orange-text {
+      color: orange;
     }
-    
-   
-   
+    .pink-text {
+      color: pink !important;
+    }
+    .blue-text {
+      color: blue;
+    }
   </style>
-  <h1 class="bl">Override Class Declarations with Inline Styles</h1>
-  <h3 class="bl" id="tt" style="color: green;">Override Class Declarations with Inline Styles</h3>
-</body>
-</html>
+  <h1 id="orange-text" class="pink-text blue-text" style="color: white">Hello World!</h1>
