--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
-<style>
-    body {
-      background-color: black;
-      font-family: monospace;
-      color: green;
-    }
-    #orange-text {
-      color: orange;
-    }
-    .pink-text {
-      color: pink !important;
-    }
-    .blue-text {
-      color: blue;
-    }
-  </style>
-  <h1 id="orange-text" class="pink-text blue-text" style="color: white">Hello World!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <style>
+        h1{
+            background-color: #000000;
+        }
+    </style>
+    <h1 style="color: pink;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea magnam distinctio illo officiis molestiae sit tempora odit porro libero maiores?</h1>
+</body>
+</html>
