--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <style>
         :root {
-          /* Only change code below this line */
-      --penguin-belly:pink;
-          /* Only change code above this line */
+          --penguin-skin: gray;
+          --penguin-belly: pink;
+          --penguin-beak: orange;
         }
       
         body {
@@ -19,8 +19,9 @@
         }
       
         .penguin {
-          --penguin-skin: gray;
-          --penguin-beak: orange;
+          /* Only change code below this line */
+      --penguin-belly:white;
+          /* Only change code above this line */
           position: relative;
           margin: auto;
           display: block;
@@ -32,7 +33,7 @@
         .right-cheek {
           top: 15%;
           left: 35%;
-          background: var(--penguin-belly, white);
+          background: var(--penguin-belly, pink);
           width: 60%;
           height: 70%;
           border-radius: 70% 70% 60% 60%;
@@ -41,7 +42,7 @@
         .left-cheek {
           top: 15%;
           left: 5%;
-          background: var(--penguin-belly, white);
+          background: var(--penguin-belly, pink);
           width: 60%;
           height: 70%;
           border-radius: 70% 70% 60% 60%;
@@ -50,7 +51,7 @@
         .belly {
           top: 60%;
           left: 2.5%;
-          background: var(--penguin-belly, white);
+          background: var(--penguin-belly, pink);
           width: 95%;
           height: 100%;
           border-radius: 120% 120% 100% 100%;
