--- a/template1.html
+++ b/template1.html
@@ -42,15 +42,14 @@
             
             width: 70%;
             background-color: aliceblue;
-            padding: 10px;
-            padding-left: 20px;
-            padding-right: 10px;
+            padding: 1%;
+            padding-left: 2%;
+            padding-right: 1%;
             font-size: 12px;
             margin: -3px;
-            margin-left: -10px;
-            /* margin-top: 52px; */
+            margin-left: -10px
             float: left;
-            height: 440px;
+            height: 130%;
         }
         #aside{
             
