--- a/template2.html
+++ b/template2.html
@@ -51,11 +51,11 @@
     </div>
 </div>
 <div style="display: flex">
-    <div style=" width: 20%;margin-left: 55px;height: 100px; margin-top: 20px;float: left;text-align: center;"><b>Heading 1</b> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, eos.</p><a style="text-decoration: underline;color: black;" href="">Learn More</a>
+    <div style=" width: 20%;margin-left: 55px;height: 15%; margin-top: 5%;float: left;text-align: center;"><b>Heading 1</b> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, eos.</p><a style="text-decoration: underline;color: black;" href="">Learn More</a>
     </div>
-    <div style=" width: 20%;margin-left: 120px;height: 100px; margin-top: 20px;float: left;text-align: center;"><b>Heading 1</b> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, eos.</p><a style="text-decoration: underline;color: black;" href="">Learn More</a>
+    <div style=" width: 20%;margin-left: 120px;height: 100px; margin-top: 5%;float: left;text-align: center;"><b>Heading 1</b> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, eos.</p><a style="text-decoration: underline;color: black;" href="">Learn More</a>
     </div>
-    <div style=" width: 20%;margin-left: 120px;height: 100px; margin-top: 20px;float: left;text-align: center;"><b>Heading 1</b> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, eos.</p><a style="text-decoration: underline;color: black;" href="">Learn More</a></div>
+    <div style=" width: 20%;margin-left: 120px;height: 100px; margin-top: 5%;float: left;text-align: center;"><b>Heading 1</b> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, eos.</p><a style="text-decoration: underline;color: black;" href="">Learn More</a></div>
     </div>
 </div>
     <div style="text-align: center;width: 88%;display: block;background-color:gray;margin-left: 20px;font-size: large;padding: 15px;">
