--- a/template1.html
+++ b/template1.html
@@ -47,9 +47,9 @@
             padding-right: 1%;
             font-size: 12px;
             margin: -3px;
-            margin-left: -10px
+            margin-left: -10px;
             float: left;
-            height: 130%;
+            height: 70vh;
         }
         #aside{
             
@@ -66,7 +66,7 @@
             margin-left: 0px;
             margin-right: 0px;
             background-color: rgb(107, 103, 103);
-            margin-top: 3px;
+            margin-top: 0%;
             padding-top: 5px;
             font-size: 15px;
             padding-right: 20px;
