--- a/template2.html
+++ b/template2.html
@@ -1,70 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <style>
-        #one{
-            text-align: right;
-            margin-top: 30px;
-            margin-right: 50px;
-            width: 90%;
-        }
-        a{
-            text-decoration: none;
-            margin: 5px;
-        }
-        #two{
-            width: 100%;
-            padding-left: 20px;
-        }
-        body{
-            font-size: 10px;
-        }
-    </style>
-    <div id="one">
-        <a href="">Product</a>
-        <a href="">Solution</a>
-        <a href="">Company</a>
-    </div>
-    <div id="two">
-        <h2>Site Logo</h2>
-    </div>
-    <div style="background-color: gray; width: 90%;margin-left: 20px;height: 200px; display: flex;">
-    <div style="background-color: gray;width: 30%;padding: 20px;">
-        <h3>We Power eCommerce</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, quasi id nobis, expedita illo sit beatae et delectus dicta enim unde alias veniam cumque quia quae nesciunt distinctio molestiae quaerat.</p><br>
-        <input type="button" value="Learn More" style="border: 1px;">
-    </div>
-    </div>
-    <div style="display: flex">
-        <div style="background-color: gray; width: 20%;margin-left: 55px;height: 100px; margin-top: 20px;float: left;">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CSS Template 2</title>
+    <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" media="screen and (max-width:850px)" href="media_template_2.css">
+  </head>
+  <body>
+    <div class="main">
+      <!-- navbar section. -->
+      <nav>
+        <ul>
+          <li><a href="#"> Products</a></li>
+          <li><a href="#">Solutions</a></li>
+          <li><a href="#"> Company</a></li>
+        </ul>
+      </nav>
+
+      <!-- Heading Section, -->
+      <div id="heading">
+        <h1>Site Logo</h1>
+      </div>
+
+      <!-- First section. -->
+      <div class="content">
+        <h2>We Power eCommerce</h2>
+        <br />
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Lorem ipsum dolor sit.</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Lorem, ipsum dolor.</p>
+        <button>Learn More</button>
+      </div>
+
+      <!-- second Section. -->
+      <div class="section">
+
+        <!-- first division section. -->
+        <div class="area">
+          <div class="chart"></div>
+          <div class="sentence">
+            <h3>Heading 1</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p class="gap">Lorem ipsum dolor sit amet.</p>
+            <div class="anchor">
+              <a href="#">Learn More</a>
+            </div>
+           
+          </div>
         </div>
-        <div style="background-color: gray; width: 20%;margin-left: 120px;height: 100px; margin-top: 20px;float: left;">
+
+        <!-- second division section. -->
+        <div class="area">
+          <div class="chart"></div>
+          <div class="sentence">
+            <h3>Heading 1</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p class="gap">Lorem ipsum dolor sit amet.</p>
+            <div class="anchor">
+              <a href="#">Learn More</a>
+            </div>
+          </div>
         </div>
-        <div style="background-color: gray; width: 20%;margin-left: 120px;height: 100px; margin-top: 20px;float: left;">
+
+        <!-- third division section. -->
+        <div class="area">
+          <div class="chart"></div>
+
+          <div class="sentence">
+            <h3>Heading 1</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p class="gap">Lorem ipsum dolor sit amet.</p>
+            <div class="anchor">
+              <a href="#">Learn More</a>
+            </div>
+          </div>
         </div>
+      </div>
+
+
+      <!-- Subscribe Section. -->
+      <div class="subscribe">
+            <h2>Subsribe Us</h2>
+            <input type="text" name="" id="" placeholder="Text box">
+            <button type="submit">Submit</button>
+      </div>
+
+      <!-- Footer Section. -->
+      <footer>
+          <p id="left">copyright &copy; 2020</p>
+          <p id="right">CEDCOSS Technologies</p>
+      </footer>
+
     </div>
-</div>
-<div style="display: flex">
-    <div style=" width: 20%;margin-left: 55px;height: 15%; margin-top: 5%;float: left;text-align: center;"><b>Heading 1</b> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, eos.</p><a style="text-decoration: underline;color: black;" href="">Learn More</a>
-    </div>
-    <div style=" width: 20%;margin-left: 120px;height: 100px; margin-top: 5%;float: left;text-align: center;"><b>Heading 1</b> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, eos.</p><a style="text-decoration: underline;color: black;" href="">Learn More</a>
-    </div>
-    <div style=" width: 20%;margin-left: 120px;height: 100px; margin-top: 5%;float: left;text-align: center;"><b>Heading 1</b> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, eos.</p><a style="text-decoration: underline;color: black;" href="">Learn More</a></div>
-    </div>
-</div>
-    <div style="text-align: center;width: 88%;display: block;background-color:gray;margin-left: 20px;font-size: large;padding: 15px;">
-        <label for=""><b>Subscribe US </b><input type="text" style="width: 30%;margin-left: 10px;border: 1px;border-color: yellow;" placeholder="Text box">
-        <input type="button" value="Submit" style="width: 15%;background-color: blue;color: aliceblue;padding: 0px;text-align: left;border: none;"></label>
-    </div>
-    <div style="margin-left: 20px;margin-right: 70px;">
-        <p style="text-align: left;float: left;">Copyright &copy;2020</p>
-        <p style="float: right;"> Cedcoss Technologies</p>
-    </div>
-</body>
+  </body>
 </html>
